Issue #96: users openapi for get
